--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <button id="advance">Advance Turn</button>
     </div>
 
-    <script src="index.js"></script>
+    <script type="module" src="index.js"></script>
 </body>
 
 </html>
